--- a/choice_models_dev.ipynb
+++ b/choice_models_dev.ipynb
@@ -931,7 +931,7 @@
     "        params_in = gen_rand_vals(bounds[mname])\n",
     "        indata = {\"options\": options_all, \"r\":rew_all, \"nbandit\":3, \"model\":m, \"generate_choices\":1} \n",
     "\n",
-    "        mpred = m(params_in, indata)\n",
+    "        mpred = m(params_in, indata=indata)\n",
     "\n",
     "        #induce noice by randomly replaceing proportion of choices\n",
     "        mpred[\"choices\"] = replace_random_values(mpred[\"choices\"], noise)\n",
